force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/LLC_BI__Projected_Draw_Event__c.object-meta.xml
<CustomObject>
    <description>This object stores the individual draw from a Draw Schedule.</description>
    <label>Projected Draw Event</label>
    <nameField>
        <label>Projected Draw Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected Draw Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>