force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>The system populates this optional currency field to indicate the amoount of money to draw for the draw item. By default, it is blank.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>