force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>Users populate this optional text field to define the purpose of the draw. By default, it is blank.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>