force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Event_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Event_Date__c</fullName>
    <description>This field is automatically populated by the system based off of the associated period and payment start date values. By default, it is blank.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>