force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency__c</fullName>
    <description>The system populates this optional text field to indicate draw frequency. By default, it is blank.</description>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>