force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percentage__c</fullName>
    <description>Users populate this optional percentage field to indicate the percent of total loan amount drawn for the draw item. By default, it is blank.</description>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>