force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Period__c</fullName>
    <description>Users populate this optional number field to denote the starting period for the draw. By default, it is blank.</description>
    <label>Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>