force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Proj_Draw_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Proj_Draw_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this optional lookup field to reference the draw schedule for the event.</description>
    <label>Projected Draw Schedule</label>
    <referenceTo>LLC_BI__Projected_Draw_Schedule__c</referenceTo>
    <relationshipLabel>Projected Draw Events</relationshipLabel>
    <relationshipName>Projected_Draw_Events</relationshipName>
    <type>Lookup</type>
</CustomField>