force-app/main/default/objects/LLC_BI__Projected_Draw_Event__c/fields/LLC_BI__Projected_Draw_Event__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Projected_Draw_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this optional lookup field to track related recurring draw events.</description>
    <label>Starting Draw Event</label>
    <referenceTo>LLC_BI__Projected_Draw_Event__c</referenceTo>
    <relationshipLabel>Projected Draw Events</relationshipLabel>
    <relationshipName>Projected_Draw_Events</relationshipName>
    <type>Lookup</type>
</CustomField>